--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 img {
     width: 150px;
 }
+
 .deal {
     font-size: xx-large;
     padding: 10px 20px;
@@ -49,6 +50,7 @@ img {
     top: 75px;
     left: 50px;
 }
+
 #inzet {
     font-size: xx-large;
     position: absolute;
@@ -60,6 +62,7 @@ img {
     color: white;
     border-color: white;
 }
+
 #stand {
     font-size: x-large;
     padding: 10px 20px;
@@ -73,6 +76,7 @@ img {
     left: 50px;
     visibility: hidden;
 }
+
 #again {
     font-size: x-large;
     padding: 10px 20px;
@@ -81,10 +85,11 @@ img {
     top: 375px;
     left: 50px;
     visibility: hidden;
-    border-color: red;
+    border: 2px solid red;
     background-color: red;
     color: white;
 }
+
 .align {
     display: flex;
     align-items: baseline;
@@ -109,18 +114,19 @@ img {
     visibility: hidden;
 }
 
-
 #punten {
     display: flex;
     align-items: center;
     font-size: xx-large;
     margin-right: 20px;
 }
-.puntenkaarten{
+
+.puntenkaarten {
     display: flex;
     justify-content: center;
     flex-direction: row;
 }
+
 #dealerpunten {
     display: flex;
     align-items: center;
@@ -128,11 +134,13 @@ img {
     margin-right: 20px;
     margin-top: -200px;
 }
+
 .dealerpuntenkaarten {
     display: flex;
     justify-content: center;
     flex-direction: row;
 }
+
 .img {
     display: flex;
     justify-content: center;
@@ -140,10 +148,17 @@ img {
     width: 400px;
     margin-top: 20px;
 }
+
 .bank {
     display: flex;
     justify-content: center;
-    margin-top: 25px;
+    margin-top: 10px;
     font-size: xx-large;
     color: white;
+}
+#allin {
+width: 100px;
+height: 100px;
+margin-top: 10px;
+margin-left: 20px;
 }
